@@ -6,6 +6,8 @@ HISTORY
     - ability to filter out files by size of their fragments was added
       (fragment_size_threshold option in GUI; UD_FRAGMENT_SIZE_THRESHOLD
       environment variable in command line tool and boot time interface)
+    - partial defragmentation intended to eliminate little fragments was
+      removed, since the same job does the fragment size threshold filter
 
 
   Version 5.0.0  2011-12-
